ui: fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 .socialLinks > img {
     height: 30px;
